Fix translation-div out of bounds in homepagesearch

--- a/UI/src/app/main/modules/homePage/homePage.component.css
+++ b/UI/src/app/main/modules/homePage/homePage.component.css
@@ -18,6 +18,7 @@
 }
 
 .div-translation {
+	display: inline-block;
     max-height: 8%;
     border-color:grey;
     border-style: solid;
